--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <style>
     body { font-family: Arial, sans-serif; padding: 0; margin: 0; background: white; }
     .hero {
-        background-image: url('WH_yellow_silk_fabric_white petals_landscape_CL24.jpg');
+       background-image: url('banner.jpg');
         background-size: cover;
         background-position: center;
         padding: 40px 20px 20px 20px;
