--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 <title>Product Map Oven</title>
 <style>
     body { font-family: Arial, sans-serif; padding: 0; margin: 0; background: white; }
+    <div style="display: flex; justify-content: space-between; align-items: center; padding: 10px 20px;">
+  <img src="logo-left.png" alt="Left Logo" style="height: 60px;">
+  <img src="logo-right.png" alt="Right Logo" style="height: 60px;">
+</div>
     .hero {
         background-image: url('banner.jpg');
         background-size: cover;
