--- a/index.html
+++ b/index.html
@@ -7,10 +7,6 @@
 <title>Product Map Oven</title>
 <style>
     body { font-family: Arial, sans-serif; padding: 0; margin: 0; background: white; }
-    <div style="display: flex; justify-content: space-between; align-items: center; padding: 10px 20px;">
-  <img src="logo-left.png" alt="Left Logo" style="height: 60px;">
-  <img src="logo-right.png" alt="Right Logo" style="height: 60px;">
-</div>
     .hero {
         background-image: url('banner.jpg');
         background-size: cover;
@@ -143,7 +139,7 @@
   </style>
 </head>
 <body>
-<div class="hero">
+<div style="display: flex; justify-content: space-between; align-items: center; padding: 10px 20px;"><img alt="Left Logo" src="logo-left.png" style="height: 60px;"/><img alt="Right Logo" src="logo-right.png" style="height: 60px;"/></div><div class="hero">
 <img class="logo-left" src="WhirlpoolBRAND-notR-2017Logo_2C_B.png"/>
 <img class="logo-right" src="8f5f7f95-d94d-4c8e-97e2-2daec17ad4a9-0-removebg-preview.png"/>
 <h1>PRODUCT MAP OVEN</h1>
@@ -207,8 +203,8 @@
 <div class="card-container">
 <div class="card">
 <div class="overlay-container">
-<img src="https://i.postimg.cc/SKfG728S/Steam-tank.png">
-</img></div>
+<img src="https://i.postimg.cc/SKfG728S/Steam-tank.png"/>
+</div>
 <div class="model">WOI7A8HT2SBA</div>
 <a href="https://i.postimg.cc/BnPCVZLF/WOI7-A8-HT2-SB-A.png" target="_blank">
 <img alt="WOI7A8HT2SBA" class="product" src="https://i.postimg.cc/rpkBw4MM/WOI7-A8-HT2-SBA.jpg"/>
@@ -226,9 +222,9 @@
 </div>
 <div class="card">
 <div class="overlay-container">
-<img src="https://i.postimg.cc/xCj3sfyK/Food-probe.png">
-<img src="https://i.postimg.cc/SKfG728S/Steam-tank.png">
-</img></img></div>
+<img src="https://i.postimg.cc/xCj3sfyK/Food-probe.png"/>
+<img src="https://i.postimg.cc/SKfG728S/Steam-tank.png"/>
+</div>
 <div class="model">WOI11P8FHT2SBAF</div>
 <a href="https://i.postimg.cc/XvcdRrVr/WOI118-HT2-SSMA.png" target="_blank">
 <img alt="WOI11P8FHT2SBAF" class="product" src="https://i.postimg.cc/2yVJKFFF/WOI11-P8-FHT2-SBAF.jpg"/>
@@ -298,8 +294,8 @@
 </div>
 <div class="card">
 <div class="overlay-container">
-<img src="https://i.postimg.cc/xCj3sfyK/Food-probe.png">
-</img></div>
+<img src="https://i.postimg.cc/xCj3sfyK/Food-probe.png"/>
+</div>
 <div class="model">WOI5S8PPM1SBA</div>
 <a href="https://i.postimg.cc/15jHBVtP/WOI5-S8-PPM1-SB-A.png" target="_blank">
 <img alt="WOI5S8PPM1SBA" class="product" src="https://i.postimg.cc/TYZ8BSsy/WOI5-S8-PPM1-SBA.jpg"/>
@@ -353,8 +349,8 @@
 </div>
 <div class="card">
 <div class="overlay-container">
-<img src="https://i.postimg.cc/xCj3sfyK/Food-probe.png">
-</img></div>
+<img src="https://i.postimg.cc/xCj3sfyK/Food-probe.png"/>
+</div>
 <div class="model">WOI78FPT1SBA</div>
 <a href="https://i.postimg.cc/sx0pTb3K/WOI78-FP-T1-SB-A.png" target="_blank">
 <img alt="WOI78FPT1SBA" class="product" src="https://i.postimg.cc/w3Kp5G8s/WOI78-FPT1-SBA.jpg"/>
@@ -364,8 +360,8 @@
 </div>
 <div class="card">
 <div class="overlay-container">
-<img src="https://i.postimg.cc/xCj3sfyK/Food-probe.png">
-</img></div>
+<img src="https://i.postimg.cc/xCj3sfyK/Food-probe.png"/>
+</div>
 <div class="model">WOI78FPT1SXA</div>
 <a href="https://i.postimg.cc/3rLCr02p/WOI78-FP-T1-SXA.png" target="_blank">
 <img alt="WOI78FPT1SXA" class="product" src="https://i.postimg.cc/6qgSJ2Ms/WOI78-FP-T1-SXA.jpg"/>
@@ -379,8 +375,8 @@
 <div class="card-container">
 <div class="card">
 <div class="overlay-container">
-<img src="https://i.postimg.cc/SKfG728S/Steam-tank.png">
-</img></div>
+<img src="https://i.postimg.cc/SKfG728S/Steam-tank.png"/>
+</div>
 <div class="model">WOI7A8PT1SB</div>
 <a href="https://i.postimg.cc/yNFy7fTY/WOI7-A8-P-T1-SB.png" target="_blank">
 <img alt="WOI7A8PT1SB" class="product" src="https://i.postimg.cc/Zqx1Bq53/WOI7-A8-PT1-SB.jpg"/>
@@ -390,9 +386,9 @@
 </div>
 <div class="card">
 <div class="overlay-container">
-<img src="https://i.postimg.cc/xCj3sfyK/Food-probe.png">
-<img src="https://i.postimg.cc/SKfG728S/Steam-tank.png">
-</img></img></div>
+<img src="https://i.postimg.cc/xCj3sfyK/Food-probe.png"/>
+<img src="https://i.postimg.cc/SKfG728S/Steam-tank.png"/>
+</div>
 <div class="model">WOI6A8FPT1SBA</div>
 <a href="https://i.postimg.cc/vmRvFRfN/WOI6-A8-FP-T1-SB-A.png" target="_blank">
 <img alt="WOI6A8FPT1SBA" class="product" src="https://i.postimg.cc/RZKrmdrg/WOI6-A8-FPT1-SBA.jpg"/>
@@ -402,8 +398,8 @@
 </div>
 <div class="card">
 <div class="overlay-container">
-<img src="https://i.postimg.cc/xCj3sfyK/Food-probe.png">
-</img></div>
+<img src="https://i.postimg.cc/xCj3sfyK/Food-probe.png"/>
+</div>
 <div class="model">WOI98FPT2SBA</div>
 <a href="https://i.postimg.cc/0ySpCtFd/WOI98-FP-T2-SB-A.png" target="_blank">
 <img alt="WOI98FPT2SBA" class="product" src="https://i.postimg.cc/YCcVdF4Y/WOI98-FPT2-SBA.jpg"/>
@@ -413,8 +409,8 @@
 </div>
 <div class="card">
 <div class="overlay-container">
-<img src="https://i.postimg.cc/xCj3sfyK/Food-probe.png">
-</img></div>
+<img src="https://i.postimg.cc/xCj3sfyK/Food-probe.png"/>
+</div>
 <div class="model">WOI98MPT2SBA</div>
 <a href="https://i.postimg.cc/7LySt3yv/WOI98-MP-T2-SB-A.png" target="_blank">
 <img alt="WOI98MPT2SBA" class="product" src="https://i.postimg.cc/mgQnJrMq/WOI98-MPT2-SBA.jpg"/>
@@ -424,8 +420,8 @@
 </div>
 <div class="card">
 <div class="overlay-container">
-<img src="https://i.postimg.cc/SKfG728S/Steam-tank.png">
-</img></div>
+<img src="https://i.postimg.cc/SKfG728S/Steam-tank.png"/>
+</div>
 <div class="model">WOI9A8PT1SBA</div>
 <a href="https://i.postimg.cc/xCny8KsG/WOI9-A8-P-T1-SB-A.png" target="_blank">
 <img alt="WOI9A8PT1SBA" class="product" src="https://i.postimg.cc/k4MLxd2H/WOI9-A8-PT1-SBA.jpg"/>
@@ -435,8 +431,8 @@
 </div>
 <div class="card">
 <div class="overlay-container">
-<img src="https://i.postimg.cc/SKfG728S/Steam-tank.png">
-</img></div>
+<img src="https://i.postimg.cc/SKfG728S/Steam-tank.png"/>
+</div>
 <div class="model">WOI9A8PT2SBA</div>
 <a href="https://i.postimg.cc/Hxz0yVKq/WOI9-A8-P-T2-SB-A.png" target="_blank">
 <img alt="WOI9A8PT2SBA" class="product" src="https://i.postimg.cc/LXywD0f8/WOI9-A8-PT2-SBA.jpg"/>
