--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
   </style>
 </head>
 <body>
-<div class="hero"><img alt="Left Logo" src="logo-left.png" style="position: absolute; top: 10px; left: 20px; height: 60px; z-index: 2;"/><img alt="Right Logo" src="logo-right.png" style="position: absolute; top: 10px; right: 20px; height: 60px; z-index: 2;"/>
+<div class="hero">
 <img class="logo-left" src="WhirlpoolBRAND-notR-2017Logo_2C_B.png"/>
 <img class="logo-right" src="8f5f7f95-d94d-4c8e-97e2-2daec17ad4a9-0-removebg-preview.png"/>
 <h1>PRODUCT MAP OVEN</h1>
