--- a/index.html
+++ b/index.html
@@ -139,8 +139,7 @@
   </style>
 </head>
 <body>
-<div class="hero">
-<img class="logo-left" src="WhirlpoolBRAND-notR-2017Logo_2C_B.png"/>
+<div class="hero"><img alt="" src="logo-left.png" style="position: absolute; top: 10px; left: 20px; height: 60px; z-index: 2;"/>
 <img class="logo-right" src="8f5f7f95-d94d-4c8e-97e2-2daec17ad4a9-0-removebg-preview.png"/>
 <h1>PRODUCT MAP OVEN</h1>
 </div>
