--- a/index.html
+++ b/index.html
@@ -140,9 +140,8 @@
 </head>
 <body>
 <div class="hero"><img alt="" src="logo-left.png" style="position: absolute; top: 10px; left: 20px; height: 60px; z-index: 2;"/><img alt="" src="logo-right.png" style="position: absolute; top: 10px; right: 20px; height: 60px; z-index: 2;"/>
-
 <h1>PRODUCT MAP OVEN</h1>
-</div> 
+</div>
 <a class="back-button" href="https://arcelik.sharepoint.com/sites/MINERVAOVEN/SitePages/ShowcaseHome.aspx">← Back to Main</a>
 <div class="grid">
 <div class="header">Cleaning \ Price</div>
@@ -152,123 +151,123 @@
 <div class="type-label type-hydro">HYDRO</div>
 <div class="cell">
 <div class="card-container">
-<div class="card">
+<a href="https://arcelik.sharepoint.com/sites/WHIRLPOOLCOMMERCIALTOOLS/Shared%20Documents/MINERVA/WOI5S8HM1SBA.pdf" style="text-decoration: none; color: inherit;" target="_blank"><div class="card">
 <div class="model">WOI5S8HM1SBA</div>
-<a href="https://i.postimg.cc/rsyJnSxy/WOI5-S8-HM1-SBA.png" target="_blank">
+
 <img alt="WOI5S8HM1SBA" class="product" src="https://i.postimg.cc/wv08PBKH/WOI5-S8-HM1-SBA.jpg"/>
-</a>
+
 <div class="description">Steam: Embossed|Hydro/Steam|1-level tel|Full Black</div>
 <div class="price">₴19,599</div>
-</div>
-<div class="card">
+</div></a>
+<a href="https://arcelik.sharepoint.com/sites/WHIRLPOOLCOMMERCIALTOOLS/Shared%20Documents/MINERVA/WOI5S8HM2SBA.pdf" style="text-decoration: none; color: inherit;" target="_blank"><div class="card">
 <div class="model">WOI5S8HM2SBA</div>
-<a href="https://i.postimg.cc/c1TTKbGv/WOI5-S8-HM2-SB-A.png" target="_blank">
+
 <img alt="WOI5S8HM2SBA" class="product" src="https://i.postimg.cc/QCCGrrs7/WOI5-S8-HM2-SBA.jpg"/>
-</a>
+
 <div class="description">Steam: Embossed|Hydro/Steam|2-level tel|Full Black</div>
 <div class="price">₴19,999</div>
-</div>
-<div class="card">
+</div></a>
+<a href="https://arcelik.sharepoint.com/sites/WHIRLPOOLCOMMERCIALTOOLS/Shared%20Documents/MINERVA/WOI4S8HM1SXA.pdf" style="text-decoration: none; color: inherit;" target="_blank"><div class="card">
 <div class="model">WOI4S8HM1SXA</div>
-<a href="https://i.postimg.cc/HnTZGGDg/WOI4-S8-HM1-SXA.png" target="_blank">
+
 <img alt="WOI4S8HM1SXA" class="product" src="https://i.postimg.cc/05hMH597/WOI4-S8-HM1-SXA.jpg"/>
-</a>
+
 <div class="description">Steam: Embossed|Hydro/Steam|1-level tel|Inox (AFP)</div>
 <div class="price">₴20,499</div>
-</div>
-<div class="card">
+</div></a>
+<a href="https://arcelik.sharepoint.com/sites/WHIRLPOOLCOMMERCIALTOOLS/Shared%20Documents/MINERVA/WOI4S8HM2SBA.pdf" style="text-decoration: none; color: inherit;" target="_blank"><div class="card">
 <div class="model">WOI4S8HM2SBA</div>
-<a href="https://i.postimg.cc/DyjCNYx9/WOI4-S8-HM2-SBA.png" target="_blank">
+
 <img alt="WOI4S8HM2SBA" class="product" src="https://i.postimg.cc/2SZY6mWF/WOI4-S8-HM2-SBA.jpg"/>
-</a>
+
 <div class="description">Steam: Embossed|Hydro/Steam|2-level tel|Full Black</div>
 <div class="price">₴20,999</div>
-</div>
+</div></a>
 </div>
 </div>
 <div class="cell">
 <div class="card-container">
-<div class="card">
+<a href="https://arcelik.sharepoint.com/sites/WHIRLPOOLCOMMERCIALTOOLS/Shared%20Documents/MINERVA/WOI78HT1SXA.pdf" style="text-decoration: none; color: inherit;" target="_blank"><div class="card">
 <div class="model">WOI78HT1SXA</div>
-<a href="https://i.postimg.cc/4Nq6VCLx/WOI78-HT1-S-XA.png" target="_blank">
+
 <img alt="WOI78HT1SXA" class="product" src="https://i.postimg.cc/ZYMXy24f/WOI78-HT1-SXA.jpg"/>
-</a>
+
 <div class="description">Steam: Embossed|Hydro/Steam|1-level tel|Inox (AFP)</div>
 <div class="price">₴22,999</div>
-</div>
+</div></a>
 </div>
 </div>
 <div class="cell">
 <div class="card-container">
-<div class="card">
+<a href="https://arcelik.sharepoint.com/sites/WHIRLPOOLCOMMERCIALTOOLS/Shared%20Documents/MINERVA/WOI7A8HT2SBA.pdf" style="text-decoration: none; color: inherit;" target="_blank"><div class="card">
 <div class="overlay-container">
 <img src="https://i.postimg.cc/SKfG728S/Steam-tank.png"/>
 </div>
 <div class="model">WOI7A8HT2SBA</div>
-<a href="https://i.postimg.cc/BnPCVZLF/WOI7-A8-HT2-SB-A.png" target="_blank">
+
 <img alt="WOI7A8HT2SBA" class="product" src="https://i.postimg.cc/rpkBw4MM/WOI7-A8-HT2-SBA.jpg"/>
-</a>
+
 <div class="description">Steam: Assisted|Hydro/Steam|2-level tel|Full Black</div>
 <div class="price">₴33,999</div>
-</div>
-<div class="card">
+</div></a>
+<a href="https://arcelik.sharepoint.com/sites/WHIRLPOOLCOMMERCIALTOOLS/Shared%20Documents/MINERVA/WOI98HT2SSMA.pdf" style="text-decoration: none; color: inherit;" target="_blank"><div class="card">
 <div class="model">WOI98HT2SSMA</div>
-<a href="https://i.postimg.cc/T1PVqTvp/WOI11-P8-FHT2-SBAF.png" target="_blank">
+
 <img alt="WOI98HT2SSMA" class="product" src="https://i.postimg.cc/7LwRkynL/WOI118-HT2-SSMA.jpg"/>
-</a>
+
 <div class="description">Steam: Embossed|Hydro/Steam|2-level tel|Stardust Matte</div>
 <div class="price">₴39,999</div>
-</div>
-<div class="card">
+</div></a>
+<a href="https://arcelik.sharepoint.com/sites/WHIRLPOOLCOMMERCIALTOOLS/Shared%20Documents/MINERVA/WOI11P8FHT2SBAF.pdf" style="text-decoration: none; color: inherit;" target="_blank"><div class="card">
 <div class="overlay-container">
 <img src="https://i.postimg.cc/xCj3sfyK/Food-probe.png"/>
 <img src="https://i.postimg.cc/SKfG728S/Steam-tank.png"/>
 </div>
 <div class="model">WOI11P8FHT2SBAF</div>
-<a href="https://i.postimg.cc/XvcdRrVr/WOI118-HT2-SSMA.png" target="_blank">
+
 <img alt="WOI11P8FHT2SBAF" class="product" src="https://i.postimg.cc/2yVJKFFF/WOI11-P8-FHT2-SBAF.jpg"/>
-</a>
+
 <div class="description">Steam: Pure 100%|Hydro/Steam|2-level tel|Probe 1 PSP|Full Black</div>
 <div class="price">₴59,999</div>
-</div>
+</div></a>
 </div>
 </div>
 <div class="divider"></div>
 <div class="type-label type-cata">CATA</div>
 <div class="cell">
 <div class="card-container">
-<div class="card">
+<a href="https://arcelik.sharepoint.com/sites/WHIRLPOOLCOMMERCIALTOOLS/Shared%20Documents/MINERVA/WOI5S8CM1SBA.pdf" style="text-decoration: none; color: inherit;" target="_blank"><div class="card">
 <div class="model">WOI5S8CM1SBA</div>
-<a href="https://i.postimg.cc/W1x5NqLS/WOI5-S8-CM1-SBA.png" target="_blank">
+
 <img alt="WOI5S8CM1SBA" class="product" src="https://i.postimg.cc/GpP1FQq4/WOI5-S8-CM1-SB-A.jpg"/>
-</a>
+
 <div class="description">Steam: Embossed|Cata|1-level tel|Full Black</div>
 <div class="price">₴19,599</div>
-</div>
-<div class="card">
+</div></a>
+<a href="https://arcelik.sharepoint.com/sites/WHIRLPOOLCOMMERCIALTOOLS/Shared%20Documents/MINERVA/WOI5S8CM1SXA.pdf" style="text-decoration: none; color: inherit;" target="_blank"><div class="card">
 <div class="model">WOI5S8CM1SXA</div>
-<a href="https://i.postimg.cc/rpWQKyqT/WOI5-S8-CM1-SXA.png" target="_blank">
+
 <img alt="WOI5S8CM1SXA" class="product" src="https://i.postimg.cc/26zN2ZK2/WOI5-S8-CM1-SXA.jpg"/>
-</a>
+
 <div class="description">Steam: Embossed|Cata|1-level tel|Inox (AFP)</div>
 <div class="price">₴19,999</div>
-</div>
-<div class="card">
+</div></a>
+<a href="https://arcelik.sharepoint.com/sites/WHIRLPOOLCOMMERCIALTOOLS/Shared%20Documents/MINERVA/WOI4S8CM1SEA.pdf" style="text-decoration: none; color: inherit;" target="_blank"><div class="card">
 <div class="model">WOI4S8CM1SEA</div>
-<a href="https://i.postimg.cc/kGwjqjqt/WOI4-S8-CM1-SEA.png" target="_blank">
+
 <img alt="WOI4S8CM1SEA" class="product" src="https://i.postimg.cc/156nxxz2/WOI4-S8-CM1-SEA.jpg"/>
-</a>
+
 <div class="description">Steam: Embossed|Cata|1-level tel|Urban Beige_OV</div>
 <div class="price">₴21,499</div>
-</div>
-<div class="card">
+</div></a>
+<a href="https://arcelik.sharepoint.com/sites/WHIRLPOOLCOMMERCIALTOOLS/Shared%20Documents/MINERVA/WOI4S8CM1SWA.pdf" style="text-decoration: none; color: inherit;" target="_blank"><div class="card">
 <div class="model">WOI4S8CM1SWA</div>
-<a href="https://i.postimg.cc/2jx9Q5h8/WOI4-S8-CM1-SWA.png" target="_blank">
+
 <img alt="WOI4S8CM1SWA" class="product" src="https://i.postimg.cc/c1vtmtGs/WOI4-S8-CM1-SWA.jpg"/>
-</a>
+
 <div class="description">Steam: Embossed|Cata|1-level tel|White</div>
 <div class="price">₴21,499</div>
-</div>
+</div></a>
 </div>
 </div>
 <div class="cell">
@@ -283,162 +282,162 @@
 <div class="type-label type-pyro">PYRO DUAL</div>
 <div class="cell">
 <div class="card-container">
-<div class="card">
+<a href="https://arcelik.sharepoint.com/sites/WHIRLPOOLCOMMERCIALTOOLS/Shared%20Documents/MINERVA/WOI5S8PM1SXA.pdf" style="text-decoration: none; color: inherit;" target="_blank"><div class="card">
 <div class="model">WOI5S8PM1SXA</div>
-<a href="https://i.postimg.cc/rmNjNhdY/WOI5-S8-PM1-S-XA.png" target="_blank">
+
 <img alt="WOI5S8PM1SXA" class="product" src="https://i.postimg.cc/RhYrSbVD/WOI5-S8-PM1-SXA.jpg"/>
-</a>
+
 <div class="description">Steam: Embossed|Pyro/Pyro Dual|1-level tel|Inox (AFP)</div>
 <div class="price">₴20,999</div>
-</div>
-<div class="card">
+</div></a>
+<a href="https://arcelik.sharepoint.com/sites/WHIRLPOOLCOMMERCIALTOOLS/Shared%20Documents/MINERVA/WOI5S8PPM1SBA.pdf" style="text-decoration: none; color: inherit;" target="_blank"><div class="card">
 <div class="overlay-container">
 <img src="https://i.postimg.cc/xCj3sfyK/Food-probe.png"/>
 </div>
 <div class="model">WOI5S8PPM1SBA</div>
-<a href="https://i.postimg.cc/15jHBVtP/WOI5-S8-PPM1-SB-A.png" target="_blank">
+
 <img alt="WOI5S8PPM1SBA" class="product" src="https://i.postimg.cc/TYZ8BSsy/WOI5-S8-PPM1-SBA.jpg"/>
-</a>
+
 <div class="description">Steam: Embossed|Pyro/Pyro Dual|1-level tel|Probe 1 PP |Full Black</div>
 <div class="price">₴21,599</div>
-</div>
-<div class="card">
+</div></a>
+<a href="https://arcelik.sharepoint.com/sites/WHIRLPOOLCOMMERCIALTOOLS/Shared%20Documents/MINERVA/WOI4IS8PM1SXA.pdf" style="text-decoration: none; color: inherit;" target="_blank"><div class="card">
 <div class="model">WOI4IS8PM1SXA</div>
-<a href="https://i.postimg.cc/NM6JPsnD/WOI4-IS8-PM1-SXA.png" target="_blank">
+
 <img alt="WOI4IS8PM1SXA" class="product" src="https://i.postimg.cc/FsqmN1YH/WOI4-IS8-PM1-SXA.jpg"/>
-</a>
+
 <div class="description">Steam: Embossed|Pyro/Pyro Dual|1-level tel|Inox (AFP)</div>
 <div class="price">₴21,699</div>
-</div>
-<div class="card">
+</div></a>
+<a href="https://arcelik.sharepoint.com/sites/WHIRLPOOLCOMMERCIALTOOLS/Shared%20Documents/MINERVA/WOI4S8PM2SBA.pdf" style="text-decoration: none; color: inherit;" target="_blank"><div class="card">
 <div class="model">WOI4S8PM2SBA</div>
-<a href="https://i.postimg.cc/DwSC3dD8/WOI4-S8-PM2-SBA.png" target="_blank">
+
 <img alt="WOI4S8PM2SBA" class="product" src="https://i.postimg.cc/7LrkJcMv/WOI4-S8-PM2-SBA.jpg"/>
-</a>
+
 <div class="description">Steam: Embossed|Pyro/Pyro Dual|2-level tel|Full Black</div>
 <div class="price">₴21,999</div>
-</div>
-<div class="card">
+</div></a>
+<a href="https://arcelik.sharepoint.com/sites/WHIRLPOOLCOMMERCIALTOOLS/Shared%20Documents/MINERVA/WOI5S8PM2SEA.pdf" style="text-decoration: none; color: inherit;" target="_blank"><div class="card">
 <div class="model">WOI5S8PM2SEA</div>
-<a href="https://i.postimg.cc/qMRw2xpj/WOI5-S8-PM2-SE-A.png" target="_blank">
+
 <img alt="WOI5S8PM2SEA" class="product" src="https://i.postimg.cc/h4ZR1hb1/WOI5-S8-PM2-SEA.jpg"/>
-</a>
+
 <div class="description">Steam: Embossed|Pyro/Pyro Dual|2-level tel|Urban Beige_OV</div>
 <div class="price">₴21,999</div>
-</div>
-<div class="card">
+</div></a>
+<a href="https://arcelik.sharepoint.com/sites/WHIRLPOOLCOMMERCIALTOOLS/Shared%20Documents/MINERVA/WOI5S8PM2SWA.pdf" style="text-decoration: none; color: inherit;" target="_blank"><div class="card">
 <div class="model">WOI5S8PM2SWA</div>
-<a href="https://i.postimg.cc/90xBvrYd/WOI5-S8-PM2-S-WA.png" target="_blank">
+
 <img alt="WOI5S8PM2SWA" class="product" src="https://i.postimg.cc/9F458VL5/WOI5-S8-PM2-SWA.jpg"/>
-</a>
+
 <div class="description">Steam: Embossed|Pyro/Pyro Dual|2-level tel|White</div>
 <div class="price">₴21,999</div>
-</div>
+</div></a>
 </div>
 </div>
 <div class="cell">
 <div class="card-container">
-<div class="card">
+<a href="https://arcelik.sharepoint.com/sites/WHIRLPOOLCOMMERCIALTOOLS/Shared%20Documents/MINERVA/WOI78PT1SBA.pdf" style="text-decoration: none; color: inherit;" target="_blank"><div class="card">
 <div class="model">WOI78PT1SBA</div>
-<a href="https://i.postimg.cc/gknyxcK7/WOI78-P-T1-SB-A.png" target="_blank">
+
 <img alt="WOI78PT1SBA" class="product" src="https://i.postimg.cc/bNSW0gvq/WOI78-PT1-SBA.jpg"/>
-</a>
+
 <div class="description">Steam: Embossed|Pyro/Pyro Dual|1-level tel|Full Black</div>
 <div class="price">₴23,599</div>
-</div>
-<div class="card">
+</div></a>
+<a href="https://arcelik.sharepoint.com/sites/WHIRLPOOLCOMMERCIALTOOLS/Shared%20Documents/MINERVA/WOI78FPT1SBA.pdf" style="text-decoration: none; color: inherit;" target="_blank"><div class="card">
 <div class="overlay-container">
 <img src="https://i.postimg.cc/xCj3sfyK/Food-probe.png"/>
 </div>
 <div class="model">WOI78FPT1SBA</div>
-<a href="https://i.postimg.cc/sx0pTb3K/WOI78-FP-T1-SB-A.png" target="_blank">
+
 <img alt="WOI78FPT1SBA" class="product" src="https://i.postimg.cc/w3Kp5G8s/WOI78-FPT1-SBA.jpg"/>
-</a>
+
 <div class="description">Steam: Embossed|Pyro/Pyro Dual|1-level tel|Full Black</div>
 <div class="price">₴24,999</div>
-</div>
-<div class="card">
+</div></a>
+<a href="https://arcelik.sharepoint.com/sites/WHIRLPOOLCOMMERCIALTOOLS/Shared%20Documents/MINERVA/WOI78FPT1SXA.pdf" style="text-decoration: none; color: inherit;" target="_blank"><div class="card">
 <div class="overlay-container">
 <img src="https://i.postimg.cc/xCj3sfyK/Food-probe.png"/>
 </div>
 <div class="model">WOI78FPT1SXA</div>
-<a href="https://i.postimg.cc/3rLCr02p/WOI78-FP-T1-SXA.png" target="_blank">
+
 <img alt="WOI78FPT1SXA" class="product" src="https://i.postimg.cc/6qgSJ2Ms/WOI78-FP-T1-SXA.jpg"/>
-</a>
+
 <div class="description">Steam: Embossed|Pyro/Pyro Dual|1-level tel|Probe 1 PSP|Inox (AFP)</div>
 <div class="price">₴24,999</div>
-</div>
+</div></a>
 </div>
 </div>
 <div class="cell">
 <div class="card-container">
-<div class="card">
+<a href="https://arcelik.sharepoint.com/sites/WHIRLPOOLCOMMERCIALTOOLS/Shared%20Documents/MINERVA/WOI7A8PT1SB.pdf" style="text-decoration: none; color: inherit;" target="_blank"><div class="card">
 <div class="overlay-container">
 <img src="https://i.postimg.cc/SKfG728S/Steam-tank.png"/>
 </div>
 <div class="model">WOI7A8PT1SB</div>
-<a href="https://i.postimg.cc/yNFy7fTY/WOI7-A8-P-T1-SB.png" target="_blank">
+
 <img alt="WOI7A8PT1SB" class="product" src="https://i.postimg.cc/Zqx1Bq53/WOI7-A8-PT1-SB.jpg"/>
-</a>
+
 <div class="description">Steam: Assisted|Pyro/Pyro Dual|1-level tel|Full Black</div>
 <div class="price">₴33,599</div>
-</div>
-<div class="card">
+</div></a>
+<a href="https://arcelik.sharepoint.com/sites/WHIRLPOOLCOMMERCIALTOOLS/Shared%20Documents/MINERVA/WOI6A8FPT1SBA.pdf" style="text-decoration: none; color: inherit;" target="_blank"><div class="card">
 <div class="overlay-container">
 <img src="https://i.postimg.cc/xCj3sfyK/Food-probe.png"/>
 <img src="https://i.postimg.cc/SKfG728S/Steam-tank.png"/>
 </div>
 <div class="model">WOI6A8FPT1SBA</div>
-<a href="https://i.postimg.cc/vmRvFRfN/WOI6-A8-FP-T1-SB-A.png" target="_blank">
+
 <img alt="WOI6A8FPT1SBA" class="product" src="https://i.postimg.cc/RZKrmdrg/WOI6-A8-FPT1-SBA.jpg"/>
-</a>
+
 <div class="description">Steam: Assisted|Pyro/Pyro Dual|1-level tel|Probe 1 PSP|Full Black</div>
 <div class="price">₴34,999</div>
-</div>
-<div class="card">
+</div></a>
+<a href="https://arcelik.sharepoint.com/sites/WHIRLPOOLCOMMERCIALTOOLS/Shared%20Documents/MINERVA/WOI98FPT2SBA.pdf" style="text-decoration: none; color: inherit;" target="_blank"><div class="card">
 <div class="overlay-container">
 <img src="https://i.postimg.cc/xCj3sfyK/Food-probe.png"/>
 </div>
 <div class="model">WOI98FPT2SBA</div>
-<a href="https://i.postimg.cc/0ySpCtFd/WOI98-FP-T2-SB-A.png" target="_blank">
+
 <img alt="WOI98FPT2SBA" class="product" src="https://i.postimg.cc/YCcVdF4Y/WOI98-FPT2-SBA.jpg"/>
-</a>
+
 <div class="description">Steam: Embossed|Pyro/Pyro Dual|2-level tel|Probe 1 PSP|Full Black</div>
 <div class="price">₴36,299</div>
-</div>
-<div class="card">
+</div></a>
+<a href="https://arcelik.sharepoint.com/sites/WHIRLPOOLCOMMERCIALTOOLS/Shared%20Documents/MINERVA/WOI98MPT2SBA.pdf" style="text-decoration: none; color: inherit;" target="_blank"><div class="card">
 <div class="overlay-container">
 <img src="https://i.postimg.cc/xCj3sfyK/Food-probe.png"/>
 </div>
 <div class="model">WOI98MPT2SBA</div>
-<a href="https://i.postimg.cc/7LySt3yv/WOI98-MP-T2-SB-A.png" target="_blank">
+
 <img alt="WOI98MPT2SBA" class="product" src="https://i.postimg.cc/mgQnJrMq/WOI98-MPT2-SBA.jpg"/>
-</a>
+
 <div class="description">Steam: Embossed|Pyro/Pyro Dual|2-level tel|Probe 4 PP|Full Black</div>
 <div class="price">₴36,999</div>
-</div>
-<div class="card">
+</div></a>
+<a href="https://arcelik.sharepoint.com/sites/WHIRLPOOLCOMMERCIALTOOLS/Shared%20Documents/MINERVA/WOI9A8PT1SBA.pdf" style="text-decoration: none; color: inherit;" target="_blank"><div class="card">
 <div class="overlay-container">
 <img src="https://i.postimg.cc/SKfG728S/Steam-tank.png"/>
 </div>
 <div class="model">WOI9A8PT1SBA</div>
-<a href="https://i.postimg.cc/xCny8KsG/WOI9-A8-P-T1-SB-A.png" target="_blank">
+
 <img alt="WOI9A8PT1SBA" class="product" src="https://i.postimg.cc/k4MLxd2H/WOI9-A8-PT1-SBA.jpg"/>
-</a>
+
 <div class="description">Steam: Assisted|Pyro/Pyro Dual|1-level tel|Full Black</div>
 <div class="price">₴45,999</div>
-</div>
-<div class="card">
+</div></a>
+<a href="https://arcelik.sharepoint.com/sites/WHIRLPOOLCOMMERCIALTOOLS/Shared%20Documents/MINERVA/WOI9A8PT2SBA.pdf" style="text-decoration: none; color: inherit;" target="_blank"><div class="card">
 <div class="overlay-container">
 <img src="https://i.postimg.cc/SKfG728S/Steam-tank.png"/>
 </div>
 <div class="model">WOI9A8PT2SBA</div>
-<a href="https://i.postimg.cc/Hxz0yVKq/WOI9-A8-P-T2-SB-A.png" target="_blank">
+
 <img alt="WOI9A8PT2SBA" class="product" src="https://i.postimg.cc/LXywD0f8/WOI9-A8-PT2-SBA.jpg"/>
-</a>
+
 <div class="description">Steam: Assisted|Pyro/Pyro Dual|2-level tel|Full Black</div>
 <div class="price">₴48,999</div>
-</div>
+</div></a>
 </div>
 </div>
 <div class="divider"></div>
